# SeSePerson

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image-build.yml
SeSePerson/: __init__.py
SeSePerson/configs/: config.py  console.py  default_config.yml  models.py
SeSePerson/plugins/: article.py
SeSePerson/plugins/chat/: __init__.py  config.py  model.py  session.py
SeSePerson/plugins/database/: __init__.py
SeSePerson/plugins/katakana/: __init__.py  config.py
SeSePerson/utils/: config.py
SeSePerson/utils/cache/: model.py
seseperson/: __init__.py  main.py
seseperson/configs/: config.py  console.py  create.py  models.py
seseperson/plugins/: article.py  sticker.py
seseperson/plugins/chat/: __init__.py  model.py  session.py
seseperson/plugins/database/: __init__.py
seseperson/plugins/katakana/: __init__.py  config.py  model.py
seseperson/plugins/newchat/: memory.py
seseperson/utils/: config.py
seseperson/utils/cache/: __init__.py  model.py
seseperson/utils/downloader/: __init__.py  exceptions.py
tests/: __init__.py
