[tool.poetry]
name = "SeSePerson"
version = "0.0.0"
description = "A highly intelligent AI"
authors = ["coming <kangming06@hotmail.com>"]
readme = "README.md"
license = "GPL-3.0"
repository="https://github.com/wellcoming/SeSePerson"


[[tool.poetry.source]]
name = "tsinghua-mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-onebot = "^2.4.4"
tortoise-orm = "^0.21.6"
pillow = "^10.4.0"
ruamel-yaml = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
